--- a/Customer UI/css/style.css
+++ b/Customer UI/css/style.css
@@ -255,3 +255,15 @@ a.article, a.article:hover {
         display: none;
     }
 }
+
+#footer {
+    background: #6d7fcc;
+    margin-top:5rem;
+    margin-bottom:0 
+}
+
+#footer p {
+    color: #fff;
+    font-size:1.5rem;
+    margin: auto;
+}
