--- a/ServiceProvider UI/css/theme.css
+++ b/ServiceProvider UI/css/theme.css
@@ -195,7 +195,9 @@ th {
 
 label {
   display: inline-block;
-  margin-bottom: .5rem; }
+  margin-bottom: .5rem; 
+  padding-top: 1em;
+}
 
 button {
   border-radius: 0; }
