--- a/ServiceProvider UI/css/theme.css
+++ b/ServiceProvider UI/css/theme.css
@@ -195,9 +195,7 @@ th {
 
 label {
   display: inline-block;
-  margin-bottom: .5rem; 
-  padding-top: 1em;
-}
+  margin-bottom: .5rem; }
 
 button {
   border-radius: 0; }
